# serde_compact

./: Cargo.toml  README.md
src/: lib.rs
tests/: compact.rs
